ultimo commit do dia - continua amanhã

--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -5,7 +5,7 @@
         "jsx": "react",
         "paths": {
             "components:/*": [
-                "./components/*"
+                "componentes/*"
             ],
             "containers:/*": [
                 "./containers/*"
